[package]
name = "rgrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
futures = "0.3.25"
prost = "0.11.6"
tokio = { version = "1.24.2", features = ["full"] }
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
